# inframon

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.openfang  README.md  docker-compose.openfang.yml  docker-compose.yml  package-lock.json  package.json  pm2.config.cjs  pm2.config.js  tsconfig.server.json
.beads/: metadata.json
.pi/agent/agents/: inframon.md
.pi/agent/skills/: ak-infra  junos-config  (+6 more)
docs/: ARCHITECTURE.md  RELATED.md  SETUP.md  TAILSCALE.md  ZABBIX-WEBHOOK-SETUP.md
mcp-servers/juniper/: pyproject.toml
mcp-servers/juniper/src/mcp_juniper/: server.py
mcp-servers/proxmox/: pyproject.toml
mcp-servers/proxmox/src/mcp_proxmox/: server.py
mcp-servers/zabbix/: pyproject.toml
mcp-servers/zabbix/src/mcp_zabbix/: server.py
openfang/: .env.example  UPSTREAM_ISSUES.md  config.toml
openfang/docs/: SUMMARY.md  hands.md
openfang/scripts/: entrypoint.sh  juniper-api.py  proxmox-api.py  proxmox-query.py  trigger-ak-digest.sh  trigger-patrol.sh  zabbix-api.py  zabbix-query.sh
openfang/workflows/: ak-maintenance.json
scripts/: setup-ak-openfang.sh
skills/email-notify/: SKILL.md
skills/infrastructure-reference/: SKILL.md
skills/juniper-monitoring/: SKILL.md
skills/matrix-notify/: SKILL.md
skills/openrouter-costs/: SKILL.md
skills/pbs-monitoring/: SKILL.md
skills/proxmox-monitoring/: SKILL.md
skills/truenas-monitoring/: SKILL.md  pyproject.toml
skills/zabbix-monitoring/: SKILL.md
src/: server.ts
web-ui-app/: index.html  package-lock.json  package.json  vite.config.ts
web-ui-app/src/: app.css  main.ts  tools.ts
(+28 files in other folders)
