[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-zabbix"
version = "0.1.0"
description = "Zabbix monitoring MCP server for infrastructure monitoring"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "pyzabbix>=1.3",
]

[project.scripts]
mcp-zabbix = "mcp_zabbix.server:main"
